--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -409,6 +409,69 @@
                label="Create New AS Dto"
                menubarPath="org.seasar.dolteng.eclipse.menu/additions2"/>
       </objectContribution>
+      <objectContribution
+            adaptable="true"
+            id="org.seasar.dolteng.eclipse.service.objectContribution"
+            nameFilter="*.java"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               id="org.seasar.dolteng.eclipse.menu"
+               label="Dolteng"
+               path="additions">
+            <groupMarker name="additions"/>
+            <groupMarker name="additions2"/>
+         </menu>
+         <visibility>
+            <and>
+               <objectState
+                     name="projectNature"
+                     value="org.seasar.dolteng.eclipse.nature.flex"/>
+               <or>
+                  <objectState
+                        name="name"
+                        value="*Service.java"/>
+                  <objectState
+                        name="name"
+                        value="*ServiceImpl.java"/>
+               </or>
+            </and>
+         </visibility>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenAsPagePairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenAsPagePairAction"
+               icon="icons/file_change.gif"
+               id="org.seasar.dolteng.eclipse.service.OpenAsPagePairAction"
+               label="Open Page Pair"
+               menubarPath="org.seasar.dolteng.eclipse.menu/additions"/>
+      </objectContribution>
+      <objectContribution
+            adaptable="true"
+            id="org.seasar.dolteng.eclipse.aspage.objectContribution"
+            nameFilter="*.as"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               id="org.seasar.dolteng.eclipse.menu"
+               label="Dolteng"
+               path="additions">
+            <groupMarker name="additions"/>
+            <groupMarker name="additions2"/>
+         </menu>
+         <visibility>
+            <and>
+               <objectState
+                     name="projectNature"
+                     value="org.seasar.dolteng.eclipse.nature.flex"/>
+            </and>
+         </visibility>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenAsPagePairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenAsPagePairAction"
+               enablesFor="1"
+               icon="icons/file_change.gif"
+               id="org.seasar.dolteng.eclipse.aspage.OpenAsPagePairAction"
+               label="Open Page Pair"
+               menubarPath="org.seasar.dolteng.eclipse.menu/additions"/>
+      </objectContribution>
    </extension>
    <extension
          point="org.eclipse.ui.editorActions">
@@ -601,6 +664,10 @@
             categoryId="org.seasar.dolteng.eclipse.command.category"
             id="org.seasar.dolteng.eclipse.command.ViewOnServerAction"
             name="ViewOnServer"/>
+      <command
+            categoryId="org.seasar.dolteng.eclipse.command.category"
+            id="org.seasar.dolteng.eclipse.command.OpenAsPagePairAction"
+            name="OpenAsPagePair"/>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
