--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -481,36 +481,48 @@
          <menu
                id="org.seasar.dolteng.eclipse.editor.Actions"
                label="Dolteng"
-               path="Edit/additions">
+               path="Navigate/additions">
             <separator name="additions"/>
          </menu>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenPagePairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenPagePairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenPagePairAction"
                label="%openPagePair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenActionPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenActionPairAction"
                label="%openActionPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenDaoPairAction"
                label="%openDaoPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenEntityPairAction"
                label="%openEntityPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenAsPagePairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenAsPagePairAction"
+               icon="icons/file_change.gif"
+               id="org.seasar.dolteng.eclipse.OpenAsPagePairAction"
+               label="%openPagePair.label"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
       </editorContribution>
       <editorContribution
@@ -519,7 +531,7 @@
          <menu
                id="org.seasar.dolteng.eclipse.editor.Actions"
                label="Dolteng"
-               path="Edit/additions">
+               path="Navigate/additions">
             <separator name="additions"/>
          </menu>
          <action
@@ -527,14 +539,14 @@
                definitionId="org.seasar.dolteng.eclipse.command.OpenPagePairAction"
                id="org.seasar.dolteng.eclipse.OpenPagePairAction"
                label="%openPagePair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenActionPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
                id="org.seasar.dolteng.eclipse.OpenActionPairAction"
                label="%openActionPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
       </editorContribution>
       <editorContribution
@@ -543,7 +555,7 @@
          <menu
                id="org.seasar.dolteng.eclipse.editor.Actions"
                label="Dolteng"
-               path="Edit/additions">
+               path="Navigate/additions">
             <separator name="additions"/>
          </menu>
          <action
@@ -551,28 +563,28 @@
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
                id="org.seasar.dolteng.eclipse.OpenDaoPairAction"
                label="%openDaoPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
                id="org.seasar.dolteng.eclipse.OpenEntityPairAction"
                label="%openEntityPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
                id="org.seasar.dolteng.eclipse.OpenDaoPairAction"
                label="%openDaoPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
                id="org.seasar.dolteng.eclipse.OpenEntityPairAction"
                label="%openEntityPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
       </editorContribution>
       <editorContribution
@@ -581,36 +593,48 @@
          <menu
                id="org.seasar.dolteng.eclipse.editor.Actions"
                label="Dolteng"
-               path="Edit/additions">
+               path="Navigate/additions">
             <separator name="additions"/>
          </menu>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenPagePairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenPagePairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenPagePairAction"
                label="%openPagePair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenActionPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenActionPairAction"
                label="%openActionPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenDaoPairAction"
                label="%openDaoPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenEntityPairAction"
                label="%openEntityPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenAsPagePairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenAsPagePairAction"
+               icon="icons/file_change.gif"
+               id="org.seasar.dolteng.eclipse.OpenAsPagePairAction"
+               label="%openPagePair.label"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
       </editorContribution>
       <editorContribution
@@ -619,23 +643,43 @@
          <menu
                id="org.seasar.dolteng.eclipse.editor.Actions"
                label="Dolteng"
-               path="Edit/additions">
+               path="Navigate/additions">
             <separator name="additions"/>
          </menu>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenPagePairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenPagePairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenPagePairAction"
                label="%openPagePair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push">
          </action>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenActionPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.OpenActionPairAction"
                label="%openActionPair.label"
-               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
+      </editorContribution>
+      <editorContribution
+            id="org.seasar.dolteng.eclipse.flexbuilder.actionscript.editorContribution"
+            targetID="com.adobe.flexbuilder.editors.actionscript.ActionScriptEditor">
+         <menu
+               id="org.seasar.dolteng.eclipse.editor.Actions"
+               label="Dolteng"
+               path="Navigate/additions">
+            <separator name="additions"/>
+         </menu>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenAsPagePairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenAsPagePairAction"
+               icon="icons/file_change.gif"
+               id="org.seasar.dolteng.eclipse.OpenAsPagePairAction"
+               label="%openPagePair.label"
+               menubarPath="Navigate/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
       </editorContribution>
    </extension>
