git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@462 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/resources"/>
+	<classpathentry kind="src" path="target/classes"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-logging-1.0.4.jar" sourcepath="template/jars/sources/commons-logging-1.0.4-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/geronimo-j2ee_1.4_spec-1.0.jar"/>
@@ -13,15 +14,15 @@
 	<classpathentry kind="lib" path="template/jars/fuzzyxml-0.0.9.jar" sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/freemarker-2.3.8.jar" sourcepath="/freemarker-2.3.8/src"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/h2-2006-11-03.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/javassist-3.4.ga.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.8.jar"/>
-	<classpathentry kind="lib" path="template/jars/s2-framework-2.4.8.jar" sourcepath="/seasar2/s2-framework/src/main/java"/>
-	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
-	<classpathentry kind="lib" path="template/jars/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="template/jars/antlr-20070101.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-framework-2.4.9.jar"/>
 	<classpathentry kind="lib" path="template/jars/metaas-0.5.jar" sourcepath="template/jars/sources/metaas-0.5-sources.jar"/>
-	<classpathentry kind="lib" path="template/jars/stringtemplate-2.3b9.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/antlr-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/antlr-20070101.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/stringtemplate-2.3b9.jar"/>
+	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
+	<classpathentry kind="lib" path="template/jars/h2-2007-01-30.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="target/classes"/>
