--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -26,3 +26,4 @@ SYNCED=images/synced.gif
 PACKAGE=images/package_obj.gif
 INTERFACE=images/innerinterface_public_obj.gif
 CLASS=images/class_obj.gif
+RENAME=images/rename.gif
