git-svn-id: https://www.seasar.org/svn/chura/trunk@486 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension-point id="resourceHandler" name="resourceHandler" schema="schema/resourceHandler.exsd"/>
+   <extension-point id="newProject" name="newProject" schema="schema/newProject.exsd"/>
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
