git-svn-id: https://www.seasar.org/svn/chura/trunk@508 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/build.properties
+++ b/dolteng/org.seasar.dolteng.projects/build.properties
@@ -1,5 +1,13 @@
-source.. = src/main/java/
-output.. = target/classes/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               plugin.xml,\
+               dolteng-projects.jar,\
+               template/,\
+               schema/,\
+               icons/
+jars.compile.order = dolteng-projects.jar
+source.dolteng-projects.jar = target/classes/,\
+                              src/main/java/
+src.includes = template/,\
+               plugin.xml,\
+               icons/,\
+               META-INF/
