git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@510 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/build.properties
+++ b/build.properties
@@ -10,7 +10,11 @@ bin.includes = plugin.xml,\
                template/jars/antlr-20070101.jar,\
                template/jars/stringtemplate-2.3b9.jar
 jars.compile.order = dolteng-core.jar
-source.dolteng-core.jar = target/classes/
+source.dolteng-core.jar = target/classes/,\
+                          src/main/java/,\
+                          src/main/resources/,\
+                          src/test/java/,\
+                          src/test/resources/
 src.includes = plugin.properties,\
                plugin.xml,\
                plugin_ja.properties,\
