git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@511 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/build.properties
+++ b/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                template/jars/metaas-0.5.jar,\
                template/jars/antlr-2.7.6.jar,\
                template/jars/antlr-20070101.jar,\
-               template/jars/stringtemplate-2.3b9.jar
+               template/jars/stringtemplate-2.3b9.jar,\
+               template/jars/junit-3.8.2.jar
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
