git-svn-id: https://www.seasar.org/svn/chura/trunk@534 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -6,7 +6,7 @@
       <page
             adaptable="true"
             class="org.seasar.dolteng.eclipse.preferences.DoltengProjectPreferencePage"
-            id="propertyPages"
+            id="org.seasar.dolteng.eclipse.propertyPages"
             name="Dolteng"
             objectClass="org.eclipse.core.resources.IProject"/>
    </extension>
